kubernetes/workloads/apps/smart-home/home-assistant/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass
  labels:
    app.kubernetes.io/name: hass
  annotations:
    reloader.stakater.com/auto: "true"
    ignore-check.kube-linter.io/no-read-only-root-fs: "Unsupported for this app."
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: hass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hass
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 108123
        runAsGroup: 108123
        fsGroup: 108123
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: hass
          image: ghcr.io/home-operations/home-assistant:2026.9.4@sha256:68dbac1e259cea28c23031e456d31a27f9429e9b5711500ac21ac7d5bcdcb57f
          imagePullPolicy: IfNotPresent
          ports:
            - name: hass-http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: hass-data
              mountPath: /config
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 2000m
              memory: 500Mi
          livenessProbe:
            tcpSocket:
              port: 8123
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: hass-config
          configMap:
            name: hass-config
            defaultMode: 0770
        - name: hass-data
          persistentVolumeClaim:
            claimName: home-assistant
