kubernetes/workloads/apps/smart-home/home-assistant/manifests/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: hass
  ports:
    - name: hass-http
      port: 8123
      protocol: TCP
      targetPort: hass-http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass
  labels:
    app.kubernetes.io/name: hass
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hass.${DOMAIN}
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: https
  hostnames:
    - hass.${DOMAIN}
  rules:
    - backendRefs:
        - name: hass
          port: 8123
